[tool.poetry]
name = "devbench"
version = "0.1.0"
description = "A benchmark suite for developers to evaluate the performace of different development tools, frameworks, and languages on their machine."
authors = ["Siddharth Rao <siddrao.926@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.12.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
devbench = "devbench.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"